# docassemble-ALDashboard

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml  setup.cfg  setup.py  test_pikepdf_copy.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: deploy.yml  mypy.yml  publish.yml
docassemble/ALDashboard/: __init__.py  aldashboard.py  alkiln_story.py  api_dashboard.py  api_dashboard_utils.py  api_dashboard_worker.py  api_labelers.py  api_mcp.py  bootstrap_compiler.py  bootstrap_theme_generator.py  create_package.py  database_compat.py  docassemble_compat.py  docx_repair.py  docx_wrangling.py  highlight_docx.py  interview_linter.py  interview_parser.py  labeler_config.py  mcp_registry.py  package_scanner.py  pdf_accessibility.py  pdf_attachment_block.py  pdf_export_utils.py  pdf_field_labeler.py  pdf_repair.py  project_maintenance.py  requirements.txt  review_generator.py  review_screen_generator.py  session_search.py  test_validate_docx.py  translation.py  translation_validation.py  validate_attachment.py  validate_docx.py  yaml_formatter.py
docassemble/ALDashboard/data/questions/: alkiln_story.yml  api_test.yml  api_translation_background.yml  browse_interviews.yml  compile_bootstrap.yml  docx_wrangling.yml  file_index.yml  generate_translation.yml  get_reset_link.yml  inactive_developer_accounts.yml  install_assembly_line.yml  install_fonts.yml  install_packages.yml  interview_linter.yml  list_sessions.yml  manage_answer_viewers.yml  manage_session_search.yml  manage_users.yml  menu.yml  nav.yml  package_scanner.yml  pdf_wrangling.yml  review_screen_generator.yml  test_translate_fragments.yml  update_packages.yml  validate_attachment.yml  validate_docx.yml  validate_translation.yml  yaml_formatter.yml
docassemble/ALDashboard/data/sources/: interview_linter_prompts.yml  labeler_prompt_library.yml  plain_language_replacements.yml
docassemble/ALDashboard/data/static/: al_dashboard.css  al_installer_theme.css  docx_labeler.css  docx_labeler.js  docx_labeler_preview_utils.js  heatmap.css  interview_linter.css  interview_linter.js  pdf_labeler.css  pdf_labeler.js  test_html.html
docassemble/ALDashboard/data/static/litlabtheme/: README.md  bootstrap-theme.css  custom.css  variables.css
docassemble/ALDashboard/data/templates/: docx_labeler.html  pdf_labeler.html  pkg_scanner_report.docx
docassemble/ALDashboard/test/: Comp_legal_screener.docx  Template-Habeas-FINAL.docx  api_review_input.yml  api_theme.scss  fixture_interview_answers.json  fixture_interview_answers_lists.json  fixture_interview_answers_textarea_newlines.json  fixture_interview_answers_unescaped_quotes.json  fixture_warning_positive_fields.docx  fixture_warning_positive_fragmented_runs.docx  fixture_warning_positive_sdt_databinding.docx  made_up_variables.docx  test_alkiln_story.py  test_api_dashboard_utils.py  test_api_labelers_query_params.py  test_bootstrap_theme_generator.py  test_copy_fields_visual_defaults.py  test_docassemble_import_compat.py  test_docx_labeler_preview_utils.node.test.js  test_docx_repair.py  test_docx_wrangling.py  test_docx_wrangling_scopes.py  test_inactive_developer_accounts.py  test_interview_linter.py  test_labeler_config.py  test_labeler_js_extraction.py  test_mcp_registry.py  test_pdf_accessibility.py  test_pdf_attachment_block.py  test_pdf_export_utils.py  test_pdf_field_labeler.py  test_pdf_field_labeler_import.py  test_pdf_label_fields_api.py  test_pdf_repair.py  test_pdf_test_fill_appearances.py  test_review_screen_generator.py  test_session_search.py  test_translation_validation.py  test_usage_heatmap.py  test_validate_docx.py  (+1 more)
scripts/: test_azure_docx_autolabel.py
