[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ALDashboard"
version = "0.26.0"
description= "Dashboard for some admin tasks"
readme = "README.md"
authors = [
    { name="Suffolk Legal Innovation and Technology Lab", email="litlab@suffolk.edu" },
]
dependencies = [
    'PyGithub>=2.1.1',
    'docassemble.ALToolbox>=0.9.2',
    'python-docx>=1.1.1',
    'openai>=1.0',
    'tiktoken',
    'pyaml',
    'formfyxer>=1.0.1'
]
license="MIT"
license-files = [
    "LICENSE"
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]

[tool.black]
extend-exclude = '(__init__.py|setup.py)'

[tool.mypy]
# global options
exclude = '''(?x)(
    ^setup.py$
  )'''

# per-module options:
[[tool.mypy.overrides]]
module = "docassemble.webapp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docassemble.base.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pycountry"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backports.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "certifi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module ="docxtpl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="github.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="xlsxwriter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="ruamel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="flask"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="docx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="mako.*"
ignore_missing_imports = true
