[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.ALDashboard"
version = "2.1.0"
description= "Dashboard for some admin tasks"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name="Suffolk Legal Innovation and Technology Lab", email="litlab@suffolk.edu" },
]
dependencies = [
    'PyGithub>=2.1.1',
    'docassemble.ALToolbox>=0.9.2',
    'python-docx>=1.1.1',
    'openai>=1.0',
    'tiktoken',
    'defusedxml',
    'xmlschema>=4.3.1',
    'pyaml',
    'formfyxer>=1.1.0',
    'dayamlchecker>=0.2.0',
    'Mako>=1.1.4',
    'pyspellchecker>=0.6.3',
    'ruamel.yaml>=0.17.4',
    'textstat>=0.7.0',
    'pdfrw>=0.4'
]
license="MIT"
license-files = [
    "LICENSE"
]

[project.urls]
Homepage = "https://courtformsonline.org"

[project.optional-dependencies]
docassemble = [
    "docassemble.webapp",
]

[tool.setuptools.packages.find]
where = [
    ".",
]

[tool.black]
extend-exclude = '(__init__.py|setup.py)'

[tool.mypy]
# global options
namespace_packages = true
explicit_package_bases = true
exclude = '''(?x)(
    ^setup.py$
  )'''

# per-module options:
[[tool.mypy.overrides]]
module = "docassemble.webapp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docassemble.base.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pycountry"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "backports.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "certifi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module ="docxtpl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="github.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="xlsxwriter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="ruamel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="flask"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="flask_cors"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="flask_cors.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="docx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="docx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="mako.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="formfyxer"
ignore_missing_imports = true


[[tool.mypy.overrides]]
module="formfyxer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="spellchecker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="docassemble.ALToolbox.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="dayamlchecker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="flask_login"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="jinja2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="jinja2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="lxml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pdfrw"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="pikepdf"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="reportlab"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="reportlab.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="sqlalchemy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="textstat"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module="werkzeug"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "docassemble.base>=1.3",
    "types-setuptools",
    "types-requests",
    "types-defusedxml",
    "mypy",
    "openai",
    "tiktoken",
    "dayamlchecker",
    "types-lxml",
    "xmlschema>=4.3.1",
]
